# Building-AI-Chatbot-with-RAG

./: Gemini_with_RAG_(pdf).ipynb
Chatbot in Container/: docker-compose.yaml  prod.Dockerfile
Chatbot in Container/container/: 1_without-RAG.ipynb  2_RAG_GPT.ipynb  Claude_with_RAG_(json).ipynb  README.md  main.py
Chatbot with RAG (json)/: ChatGPT_with_RAG_(json).ipynb  Claude_with_RAG_(json).ipynb  Gemini_with_RAG_(json).ipynb
Chatbot with RAG (pdf)/: ChatGPT_with_RAG_(pdf).ipynb  Cluade_with_RAG_(pdf).ipynb  Gemini_with_RAG_(pdf).ipynb
Chatbot without RAG/: ChatGPT_without_RAG.ipynb  Claude_without_RAG.ipynb  Gemini_without_RAG.ipynb
Connect with Line/FB/: dev.Dockerfile  prod-docker-compose.yaml
Connect with Line/FB/container/: Cluade_with_RAG_(pdf).ipynb  fruit.json  pyproject.toml  test_data.json
Connect with Line/FB/container/ai_bot/: __init__.py
Connect with Line/FB/container/ai_bot_rag/: __init__.py
Connect with Line/FB/container/facebook_chat/: __init__.py
Connect with Line/FB/container/line_chat/: __init__.py
Connect with Line/FB/container/tests/: test_init_token.py
General chatbot with RAG/: General_ChatGPT_with_RAG.ipynb  General_Cluade_with_RAG.ipynb  General_Gemini_with_RAG.ipynb
